--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
         <module>gulimall-auth-server</module>
         <module>gulimall-cart</module>
         <module>gulimall-seckill</module>
-<!--        <module>gulimall-test-sso-client</module>-->
-<!--        <module>gulimall-test-sso-server</module>-->
+   <!--     <module>gulimall-test-sso-client</module>
+        <module>gulimall-test-sso-server</module>-->
     </modules>
 
 </project>
