--- a/gulimall-product/src/main/resources/bootstrap.properties
+++ b/gulimall-product/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 spring.application.name=gulimall-product
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-#spring.cloud.nacos.config.namespace=d1926eaf-43d4-482a-b5fd-2791fe441650
+spring.cloud.nacos.config.namespace=46559dae-c83a-483b-9036-fd6e86a11646
 spring.cloud.nacos.config.file-extension=yaml
+server.port=1000
