--- a/gulimall-product/pom.xml
+++ b/gulimall-product/pom.xml
@@ -43,11 +43,12 @@
 
 
         <!--阿里云上传-->
-        <dependency>
+        <!--<dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
             <version>2.2.0.RELEASE</version>
-        </dependency>
+        </dependency>-->
+
         <dependency>
             <groupId>io.niceseason</groupId>
             <artifactId>gulimall-common</artifactId>
