--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -16,11 +16,11 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: #nacos注册中心地址:8848
+        server-addr: 127.0.0.1:8848
       config:
         name: renren-fast
-        server-addr: #nacos注册中心地址
-        namespace: 0a4ed40b-20a1-4f2c-a741-49279a883ffb
+        server-addr: 127.0.0.1:8848
+        #namespace: 0a4ed40b-20a1-4f2c-a741-49279a883ffb
     sentinel:
       transport:
         dashboard: localhost:8080
